#1868 - Fixed menu arrow word wrap/padding in link list

--- a/wp-content/themes/This-is-Helsingborg/assets/css/src/partials/_base.scss
+++ b/wp-content/themes/This-is-Helsingborg/assets/css/src/partials/_base.scss
@@ -64,6 +64,7 @@ img.responsive {
     $padding-left: 20px;
     position: relative;
     left: 20px;
+    padding-right: $padding-left;
 
     &::before {
         @include hbg-icon($icon-link-arrow);
