--- a/wp-content/themes/This-is-Helsingborg/assets/css/src/partials/_index.scss
+++ b/wp-content/themes/This-is-Helsingborg/assets/css/src/partials/_index.scss
@@ -43,6 +43,7 @@
         margin-top: 5px;
         font-weight: 300;
         font-size: 11pt;
+        white-space: break-word;
     }
 
     img {
